...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/home_motd"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/advice_nloading"
        android:textAlignment="center"
...
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/home_resolution_create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_resolution_text" />

    <Button
        android:id="@+id/home_resolution_create"
...
