...
        android:text="Goal:"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resolution_frequency_text" />

    <EditText
        android:id="@+id/resolution_name"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintBottom_toBottomOf="@+id/resolution_name_text"
...
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/resolution_goal"
        app:layout_constraintStart_toEndOf="@+id/resolution_goal"
        app:layout_constraintTop_toTopOf="@+id/resolution_goal" />

    <Button
        android:id="@+id/resolution_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="SAVE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
